# plumkdocs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: release.yaml  semantic-release.yml  test.yml
example_module/: mkdocs.yml  setup.py
example_module/docs/: index.md
example_module/sample_package/: __init__.py  functions.py
plumkdocs/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_define_env.py  test_extraction.py  test_helpers.py  test_implementation.py  test_mod_to_string.py
tests/fixtures/: __init__.py  sample_functions.py
