[build-system]
requires = [
    "hatchling",
    "setuptools>=50",
    "wheel",
    "toml",
]
build-backend = "hatchling.build"

[project]
name = "plumkdocs"
authors = [
  { name="Antonio Stanziola", email="stanziola.antonio@gmail.com" }
]
description = "Hacky mkdocs documentation for plum-dispatch "
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt", name = "MIT" }
classifiers = [
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
version="0.0.4"
dependencies = [
  "pygments>=2.12.0",
  "plum-dispatch",
  "griffe",
  "markdown",
]

[project.urls]
"Homepage" = "https://github.com/astanziola/plumkdocs"
"Bug Tracker" = "https://github.com/astanziola/plumkdocs/issues"

[tool.hatch.build]
include = ["plumkdocs*"]