[tool.poetry]
name = "plumkdocs"
version = "0.0.5"
description = "Hacky mkdocs documentation for plum-dispatch"
authors = [
  "Antonio Stanziola <stanziola.antonio@gmail.com>"
]
license = "LGPL-3.0-only"
readme = "README.md"
classifiers = [
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

packages = [
  { include="plumkdocs", from="." }
]

[tool.poetry.urls]
"Homepage" = "https://github.com/astanziola/plumkdocs"
"Bug Tracker" = "https://github.com/astanziola/plumkdocs/issues"

[tool.poetry.dependencies]
python = "^3.9"
plum-dispatch = "^2"
griffe = "^0.38.0"
markdown = "^3.5.1"
mkdocs-material = "^9.4"
mkdocstrings = "^0.24"
mkdocs-macros-plugin = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"