[metadata]
name = plumkdocs
author = Antonio Stanziola
author_email = stanziola.antonio@gmail.com
description = Hacky mkdocs documentation for plum-dispatch
url = https://github.com/astanziola/plumkdocs
license = MIT
license_file = LICENCE.txt
long_description = file: README.md
long_description_content_type = text/markdown
